# SciMaFic

./: .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  COPYING  README  SciMaFic.files  SciMaFic.includes  TODO
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/cscimafic/: CMakeLists.txt  SciMaFicMainHeader.cpp  SciMaFicMainHeader.hpp
src/lib/cscimafic/chemistry/: Element.cpp  Element.hpp  PeriodicTable.cpp  PeriodicTable.hpp  PeriodicTableData.cpp
src/lib/cscimafic/files/: XYZGradient.cpp  XYZGradient.hpp  XYZHessian.cpp  XYZHessian.hpp  XYZStructure.cpp  XYZStructure.hpp
src/lib/cscimafic/maths/: BlasLapack.hpp  DynamicArray.cpp  DynamicArray.hpp  FortranMatrix.cpp  FortranMatrix.hpp  FortranRow.cpp  FortranRow.hpp  Lapack.cpp  Lapack.hpp  Matrix.cpp  Matrix.hpp  Point.cpp  Point.hpp  SciBlas.cpp  SciBlas.hpp  SciLapack.cpp  SciLapack.hpp  SimplePoint.cpp  SimplePoint.hpp  SimpleSquareMatrix.cpp  SimpleSquareMatrix.hpp  SimpleTransformation.cpp  SimpleTransformation.hpp  SimpleVector.cpp  SimpleVector.hpp  Transformation.cpp  Transformation.hpp  Vector.cpp  Vector.hpp
src/lib/cscimafic/physics/: PrincipalAxes.cpp  PrincipalAxes.hpp
src/lib/fscimafic/: CMakeLists.txt  constants.f90  sizes.f90
src/lib/fscimafic/chemistry/: periodic_table.f90  periodic_table_dat.f90
src/lib/fscimafic/files/: xyzfile.f90  xyzfile_type.f90
src/lib/fscimafic/misc/: profiling.f90  profiling_dat.f90  profiling_types.f90  utils.f90
src/lib/fscimafic/physics/: physical_constants.f90
